# cold-email-generator

./: .gitignore  README.md  ResumeEditor.py  chatgroq.ipynb  chromadb.ipynb  email generator.ipynb  pyproject.toml  requirements.txt
app/: ResumeEditor.py  chains.py  cv_agent.py  mailmerge.py  main.py  test-mailmerge.csv  utils.py
data/: resume.json
